Initial apply of OpenRewrite recipe
```
mvn -U -Prelease,communityRelease \
    org.openrewrite.maven:rewrite-maven-plugin:run \
    -Drewrite.recipeArtifactCoordinates=org.openrewrite.recipe:rewrite-migrate-java:RELEASE \
    -Drewrite.activeRecipes=org.openrewrite.java.migrate.UpgradeToJava17 \
    -Drewrite.exportDatatables=true

mvn -Prelease,communityRelease spotless:apply sortpom:sort
```