@@ -228,7 +228,7 @@ class DataDirectoryLoaderTestSupport {
 
     public <S extends ServiceInfo> S serviceInfo(WorkspaceInfo workspace, String name, Supplier<S> factory) {
         S s = factory.get();
-        String id = String.format("%s:%s-id", workspace == null ? null : workspace.getName(), name);
+        String id = "%s:%s-id".formatted(workspace == null ? null : workspace.getName(), name);
         OwsUtils.set(s, "id", id);
         s.setName(name);
         s.setWorkspace(workspace);
